# BeAE

./: .gitignore  CMakeLists.txt  Jamfile  Jamrules  README.md
BeAE/: .OptionalPackageDescription
BeAE/Help/: help.html  history.html  index.html
BeAE/Languages/: Deutsch  English  Francais  Hungarian  Italian  Nederlands  Portugues  Russian  Spanish
BeAE/Samples/: 36-24-36-Loop
CMakeModules/: UseHaiku.cmake
Core-src/: AboutBox.cpp  AboutBox.h  AmplifierFilter.cpp  AmplifierFilter.h  AnalyzeWindow.cpp  AnalyzeWindow.h  Analyzers.h  BassBoostFilter.cpp  BassBoostFilter.h  BeAE.proj  BeAE.rdef  BeAE.rsrc  BigView.cpp  BigView.h  BitmapDrawer.cpp  BitmapDrawer.h  ByteSwap.cpp  CMakeLists.txt  CommonClass.cpp  CommonClass.h  CommonPool.cpp  CommonPool.h  CompressorFilter.cpp  CompressorFilter.h  DelayFilter.h  DelayWindow.cpp  FilterDialogs.h  Filters.cpp  Filters.h  FreqWindow.cpp  FreqWindow.h  Globals.h  History.cpp  History.h  IndexView.cpp  IndexView.h  LimiterFilter.cpp  LimiterFilter.h  MainWindow.cpp  MainWindow.h  (+74 more)
